# gcp_python_iam_analyzer

./: .gitignore  CLAUDE.md  DESIGN.md  LICENSE  Makefile  README.md  iam-manifest.yaml  iam_permissions.json  iam_permissions_v2.json  iam_role_permissions.json  method_db.json  pyproject.toml  service_registry.json
.github/skills/: iamspy
agent-sandbox/: __init__.py
agent-sandbox/attacks/: disclosure.py  run_all.py
agent-sandbox/core/: __init__.py  policy.py
agent-sandbox/experiments/: llm_adversarial.py  simulated_adversary.py
agent-sandbox/interceptor/: __init__.py
agent-sandbox/tests/: conftest.py  test_integration.py  test_lsh.py  test_taint.py
agent_sandbox/: __init__.py  __main__.py  engine.py  envoy_config.py  errors.py  example.policy.yaml  gvisor.py  hooks.py  policy.py  sandbox.py
agent_sandbox/docs/: architecture.md  decisions.md  design.md  isolation-model.md  policy-reference.md  user-guide.md
agent_sandbox/examples/: adk_agent.py  adk_policy.yaml  overwatch_demo.py
agent_sandbox/gvisor-overwatch/: Dockerfile.build
agent_sandbox/overwatch/: README.md  __init__.py  _analyzer.py  _baseline.py  _content.py  _features.py  _freezer.py  _memory.py  _scorer.py  _server.py  _types.py
agents/admin/: agent.py  tools.py
agents/ide/: agent.py  context.py  plan.py  tools.py
agents/mcp/: __main__.py  server.py
agents/shared/: gcp.py  guardrails.py  permission_rings.py  workspace.py
build_pipeline/: __init__.py  __main__.py  llm.py  pipeline.py  stats.py
build_pipeline/extractors/: docstrings.py  gapic.py  handwritten.py  monorepo.py
build_pipeline/llm/: claude.py  logger.py  prompt.py
build_pipeline/stages/: s01_service_registry.py  s02_fix_metadata.py  s03_method_db.py  s04_method_context.py  s05_fetch_iam_roles.py  s06_permission_mapping.py  s07_validate.py
docs/: README.md  accuracy.md  agent-sandbox-design.md  architecture.md  build-pipeline-v2.md  build-pipeline.md  case-study-gemini-vs-claude.md  ci-integration.md  cli.md  demo-presentation.md  design_change.md  exec-summary.md  gemini-mapping.md  getting-started.md  iam-agent.md  iamspy-platform.md  performance.md  permission-manifest.md  permission-search.md  product-story.md  scanner.md  service-registry.md  slide-deck.md  todo.md  v2-quality-analysis.md  vscode-extension.md
docs/agents/: README.md  cost-optimizer-agent.md  iam-agent.md  iam-ide-agent.md
docs/archive/: api-service-field.md  rfc-dynamic-permissions.md  todo.md
docs/experiments/: credential-provenance.md
docs/platform/: code-review-action-items.md  iamspy-platform.md  product.md
docs/scanner/: build-pipeline.md  points-to-analysis.md
evals/: results.json  run_agent_conversation.py  run_bill_optimizer_conversation.py  run_evals.py  run_live_conversation.py  run_new_project_conversation.py  run_scenario_1_autocontext.py  run_scenario_1_new_project.py  scenarios.py
evals/acme_cloud_bill_optimizer/: scenario.yaml
evals/acme_data_pipeline/: scenario.yaml
examples/: README.md  bigquery_pipeline.py  kms_encrypt_decrypt.py  secret_manager.py  storage_pipeline.py
gcp_cost_optimizer_agent/: .env.example  CLAUDE.md  README.md  deploy.py  query.py  requirements.txt  run_local.py
iam_agent/: EXAMPLE.md  README.md  __init__.py  agent.py  requirements.txt  tools.py
iam_ide_agent/: __init__.py  agent.py
sandbox/: __init__.py  e2e_test.py  experiment.py  sandbox.py  test_call_summarizer.py  test_e2e.py  test_mitm_e2e.py
sandbox-repo/: .gitignore  CLAUDE.md  pyproject.toml
sandbox-repo/docs/: design.md  plan.md
sandbox-repo/src/agent_sandbox/: __init__.py  call_summarizer.py  doc_scanner.py  e2e_test.py  env_scanner.py  sandbox.py  trace_analyzer.py
sandbox-repo/src/agent_sandbox/attacks/: __init__.py  disruption.py  run_all.py
sandbox-repo/src/agent_sandbox/core/: __init__.py  anomaly.py  classifier.py  llm_classifier.py  lsh.py  policy.py  taint.py
sandbox-repo/src/agent_sandbox/experiments/: __init__.py  e2e_runner.py  llm_adversarial.py  simulated_adversary.py
sandbox-repo/src/agent_sandbox/mcp/: interceptor.py
sandbox-repo/src/agent_sandbox/proxy/: __init__.py  cert.py  inspector.py  mitm.py
sandbox-repo/tests/: test_call_summarizer.py  test_e2e.py  test_e2e_runner.py  test_integration.py  test_llm_classifier.py  test_lsh.py  test_mcp_interceptor.py  test_mitm_e2e.py  test_proxy_inspector.py  test_taint.py
tests/: conftest.py  test_cli.py  test_credential_provenance.py  test_extractors.py  test_fetch_iam_roles.py  test_guardrails.py  test_gvisor.py  test_iam_agent_tools.py  test_import_detection.py  test_introspect.py  test_manifest.py  test_method_context.py  test_models.py  test_monorepo.py  test_permission_mapping.py  test_pipeline_cli.py  test_registry.py  test_registry_static.py  test_resolver.py  test_resources.py  test_role_mapper.py  test_s02_fix_metadata.py  test_scanner.py  test_scanner_real.py  test_smoke.py  test_type_inference.py  test_validate.py  test_workspace.py
vscode-iamspy/: .gitignore  .vscode-test.mjs  .vscodeignore  LICENSE  QUICKSTART.md  esbuild.mjs  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.test.json
(+102 files in other folders)
