[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gcp-sdk-detector"
version = "0.1.0"
description = "Statically analyze Python code to detect GCP SDK calls and resolve IAM permissions"
requires-python = ">=3.12"
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python>=0.23",
    "aiofiles>=24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5.0",
    "ruff>=0.9",
]
build = [
    "aiohttp>=3.9",
    "google-genai>=1.0",
]

[project.scripts]
gcp-sdk-detector = "gcp_sdk_detector.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests that require network, installed GCP SDKs, or performance benchmarks",
]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 99
src = ["src", "tests", "build_pipeline"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF", "C90", "PLR"]
ignore = ["E501", "PLR2004"]

[tool.ruff.lint.pylint]
max-statements = 50
max-branches = 12
max-args = 8

[tool.ruff.lint.mccabe]
max-complexity = 15

[tool.ruff.lint.isort]
known-first-party = ["gcp_sdk_detector", "build_pipeline"]

[tool.coverage.run]
source = ["gcp_sdk_detector"]

[tool.coverage.report]
show_missing = true
skip_empty = true
